# cars-api

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
docker/: dev-entrypoint.sh
src/: asgi.py  settings.py  urls.py  wsgi.py
src/apps/car/: admin.py  apps.py  entities.py  exceptions.py  models.py  querysets.py  serializers.py  services.py  urls.py  views.py
src/apps/car/migrations/: 0001_initial.py
test/test_car/: test_entities.py  test_views.py
